Update Date Added and Problem Fixed